<resources>
    <string name="app_name">Steak House</string>
    <string name="steak_name_hint">Enter the Restaurant Name.</string>
    <string name="steak_name_label">NAME</string>
    <string name="steak_address_hint">Enter the Restaurant Address.</string>
    <string name="steak_address_label">ADDRESS</string>
    <string name="steak_comments_hint">Leave comments.</string>
    <string name="steak_comments_label">COMMENTS</string>
    <string name="steak_details_label">Details</string>
    <string name="steak_recommended_label">Recommended</string>
    <string name="date_picker_title">Date of steak:</string>
</resources>
